--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>CSCE 190: Jordan Chen</title>
+    <head>
+    <title>CSCE 190: Jordan Chen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<h1>Jordan Chen</h1>
-</body>
+    <body>
+        <h1>Jordan Chen</h1>
+        <h2>About me</h2><div class="about"><p>To experience a rich life through the lens of loyal friendship: by sharing core values, 
+offering genuine affection, embracing playfulness, and showing unwavering respect in all 
+that I do.</p></div>
+        <h2>Skills</h2><div class="skills"></div>
+        <h2>Highlighted projects</h2><div class="projects"></div>
+        <h2>Contact me</h2><div class="contact"></div>
+    </body>
 </html>
