--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>CSCE 190: Jordan Chen</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+        <title>CSCE 190: Jordan Chen</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
     <body>
         <h1>Jordan Chen</h1>
-        <h2>About me</h2><div class="about"><p>To experience a rich life through the lens of loyal friendship: by sharing core values, 
-offering genuine affection, embracing playfulness, and showing unwavering respect in all 
-that I do.</p></div>
-        <h2>Skills</h2><div class="skills"></div>
-        <h2>Highlighted projects</h2><div class="projects"></div>
-        <h2>Contact me</h2><div class="contact"></div>
+        <h2>About me</h2>
+        <div class="about">
+            <p>To experience a rich life through the lens of loyal friendship: by sharing core values, 
+            offering genuine affection, embracing playfulness, and showing unwavering respect in all 
+            that I do.
+        </p>
+    </div>
+    <div class="skills">
+        <h2>Skills</h2>
+        <p>Python, Java 
+        Technical: VMware vSphere/vCenter, Active Directory, DNS, DHCP, Windows Operating System, 
+        Windows Server (2019, 2022), Linux, Microsoft Office Suite</p>
+    </div>
+    <div class="projects">
+        <h2>Highlighted projects</h2>
+    </div>
+    <div class="contact">
+        <h2>Contact me</h2>
+    </div>
     </body>
 </html>
