--- a/index.html
+++ b/index.html
@@ -6,24 +6,35 @@
     </head>
     <body>
         <h1>Jordan Chen</h1>
+
         <h2>About me</h2>
         <div class="about">
             <p>To experience a rich life through the lens of loyal friendship: by sharing core values, 
             offering genuine affection, embracing playfulness, and showing unwavering respect in all 
-            that I do.
-        </p>
-    </div>
-    <div class="skills">
-        <h2>Skills</h2>
-        <p>Python, Java 
-        Technical: VMware vSphere/vCenter, Active Directory, DNS, DHCP, Windows Operating System, 
-        Windows Server (2019, 2022), Linux, Microsoft Office Suite</p>
-    </div>
-    <div class="projects">
-        <h2>Highlighted projects</h2>
-    </div>
-    <div class="contact">
-        <h2>Contact me</h2>
-    </div>
+            that I do.</p>
+        </div>
+
+        <div class="skills">
+            <h2>Skills</h2>
+            <p>Python, Java 
+            Technical: VMware vSphere/vCenter, Active Directory, DNS, DHCP, Windows Operating System, 
+            Windows Server (2019, 2022), Linux, Microsoft Office Suite</p>
+        </div>
+
+        <div class="projects">
+            <h2>Highlighted projects</h2>
+
+            <!-- Problem Statement Assignment -->
+            <section class="project">
+                <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+                <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem Statement Screenshot"></a>
+                <p>Students living on campus often struggle to do their laundry because machines are usually occupied and there’s no reliable way to know when washers or dryers are available.</p>
+            </section>
+
+        </div>
+
+        <div class="contact">
+            <h2>Contact me</h2>
+        </div>
     </body>
 </html>
