--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     </head>
     <body>
         <h1>Jordan Chen</h1>
-        <h2>About me</h2>
         <div class="about">
             <h2>About me</h2>
             <p>To experience a rich life through the lens of loyal friendship: by sharing core values, 
@@ -29,6 +28,12 @@
                 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
                 <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem Statement Screenshot"></a>
                 <p>Students living on campus often struggle to do their laundry because machines are usually occupied and there’s no reliable way to know when washers or dryers are available.</p>
+            </section>
+            <!-- Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/CSCE 190 Affinity Diagram.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="files/CSCE 190 Affinity Diagram.png"><img src="images/CSCE 190 Affinity Diagram.png"></a>
+                <p>This diagram groups ideas for improving the on-campus laundry experience into categories such as machine availability technology, user notifications, preventing laundry abandonment, behavior improvements, and app interface features.</p>
             </section>
 
         </div>
