--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
         <div class="skills">
             <h2>Skills</h2>
+            <p>
+                My resume: <a href="files/CSCE Resume Fall 2025.pdf">PDF version</a> |
+                <a href="resume.html">HTML version</a>
+            </p>
             <p>Python, Java 
             Technical: VMware vSphere/vCenter, Active Directory, DNS, DHCP, Windows Operating System, 
             Windows Server (2019, 2022), Linux, Microsoft Office Suite</p>
