--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,11 @@
 <body>
   <h1>Jordan Chen — Resume</h1>
 
-  <p><a href="files/resume.pdf">Download PDF version</a></p>
+  <p><a href="files/CSCE Resume Fall 2025.pdf">Download PDF version</a></p>
 
   <div class="resume-container">
     <iframe 
-      src="files/resume.pdf" 
+      src="files/CSCE Resume Fall 2025.pdf" 
       width="100%" 
       height="800px"
       style="border: none;">
