resume cahnges and comments

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- I used AI to help me convert my resume from PDF to HTML. Here is the resulting code: -->
+ 
 <!DOCTYPE html>
 <html>
     <head>
