--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
         <a href="https://linkedin.com/in/jordanchen06/" target="_blank" rel="noopener">linkedin.com/in/jordanchen06/</a>
       </p>
       <p style="text-align:center;margin:0.5rem 0;font-size:0.95rem;color:#555;">
-        <a href="files/resume.pdf">Download PDF version</a>
+        <a href="files/CSCE Resume Fall 2025.pdf">Download PDF version</a>
       </p>
       <hr class="divider" />
     </header>
@@ -76,23 +76,6 @@
       </ul>
     </section>
 
-    <hr class="divider" />
-
-    <!-- OPTIONAL: Projects / Research -->
-    <section class="section">
-      <h2 class="section-title">PROJECT &amp; RESEARCH EXPERIENCE</h2>
-      <p class="item-title"><strong>Project / Research — Example</strong></p>
-      <ul class="bullets">
-        <li>Contributed to technical work using Python and related tools; describe project scope and your contributions here.</li>
-      </ul>
-    </section>
-
-    <hr class="divider" />
-
-    <!-- PRINTABLE FOOTER -->
-    <footer style="margin-top:10px;text-align:center;color:#666;font-size:0.9rem;">
-      Resume generated from uploaded PDF content. Source: uploaded file. :contentReference[oaicite:1]{index=1}
-    </footer>
   </main>
 </body>
 </html>
