--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- I used AI to help me convert my resume from PDF to HTML. Here is the resulting code: -->
- 
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -40,6 +40,14 @@
                 <a href="files/CSCE 190 Affinity Diagram.pdf"><h3>Affinity Diagram</h3></a>
                 <a href="files/CSCE 190 Affinity Diagram.png"><img src="images/CSCE 190 Affinity Diagram.png"></a>
                 <p>This diagram groups ideas for improving the on-campus laundry experience into categories such as machine availability technology, user notifications, preventing laundry abandonment, behavior improvements, and app interface features.</p>
+            </section>
+            <!-- START: Sketches -->
+            <section class="project">
+                <a href="files/Sketches_DOC.pdf">
+                <h3>Sketches</h3>
+                <img src="images/Sketches_IMG.png" alt="Sketches preview">
+                </a>
+            <p>Low-fidelity app sketches showing main screens and navigation flow for our project — includes home screen, schedule view, and friend-availability screens.</p>
             </section>
 
         </div>
