--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
             </section>
             <!-- START: Sketches -->
             <section class="project">
-                <a href="files/Sketches_DOC.pdf">
-                <h3>Sketches</h3>
+                <a href="files/Sketches_DOC.pdf"> <h3>Sketches</h3></a>
                 <img src="images/Sketches_IMG.png" alt="Sketches preview">
                 </a>
-            <p>Low-fidelity app sketches showing main screens and navigation flow for our project — includes home screen, schedule view, and friend-availability screens.</p>
+            <p>Sketches showing main screens and navigation flow for our project — includes home screen and schedule view.</p>
             </section>
 
         </div>
