--- a/index.html
+++ b/index.html
@@ -26,29 +26,35 @@
             Windows Server (2019, 2022), Linux, Microsoft Office Suite</p>
         </div>
 
-        <div class="projects">
+       <div class="projects">
             <h2>Highlighted projects</h2>
 
             <!-- Problem Statement Assignment -->
             <section class="project">
-                <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-                <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem Statement Screenshot"></a>
+                <a href="files/statement.pdf">
+                    <h3>Problem Statement</h3>
+                    <img src="images/problem.png" alt="Problem Statement Screenshot">
+                </a>
                 <p>Students living on campus often struggle to do their laundry because machines are usually occupied and there’s no reliable way to know when washers or dryers are available.</p>
             </section>
+
             <!-- Affinity Diagram Assignment -->
             <section class="project">
-                <a href="files/CSCE 190 Affinity Diagram.pdf"><h3>Affinity Diagram</h3></a>
-                <a href="files/CSCE 190 Affinity Diagram.png"><img src="images/CSCE 190 Affinity Diagram.png"></a>
+                <a href="files/CSCE 190 Affinity Diagram.pdf">
+                    <h3>Affinity Diagram</h3>
+                    <img src="images/CSCE 190 Affinity Diagram.png" alt="Affinity diagram">
+                </a>
                 <p>This diagram groups ideas for improving the on-campus laundry experience into categories such as machine availability technology, user notifications, preventing laundry abandonment, behavior improvements, and app interface features.</p>
             </section>
-            <!-- START: Sketches -->
-            <section class="project">
-                <a href="files/Sketches_DOC.pdf"> <h3>Sketches</h3></a>
-                <img src="images/Sketches_IMG.png" alt="Sketches preview">
-                </a>
-            <p>Sketches showing main screens and navigation flow for our project — includes home screen and schedule view.</p>
-            </section>
 
+            <!-- Sketches -->
+            <section class="project">
+                <a href="files/Sketches_DOC.pdf">
+                    <h3>Sketches</h3>
+                    <img src="images/Sketches_IMG.png" alt="Sketches preview">
+                </a>
+                <p>Sketches showing main screens and navigation flow for our project — includes home screen and schedule view.</p>
+            </section>
         </div>
 
         <div class="contact">
