--- a/index.html
+++ b/index.html
@@ -53,8 +53,17 @@
                 </a>
                 <p>Sketches showing main screens and navigation flow for our project — includes home screen and schedule view.</p>
             </section>
+            <!--Repositories assignment-->
+            <section class="project">
+                <a href="https://github.com/CSE-JordanC06/.dotfiles">
+                    <h3>Class project for CSCE 215 UNIX/Linux Fundamentals</h3>
+                </a>
+                <a href="https://github.com/CSE-JordanC06/.dotfiles">
+                    <img src="images/Combo.png">
+                </a>
+                <p>Connecting github to a terminal via linux in my CSCE 215 class.</p>
+            </section>
         </div>
-
         <div class="contact">
             <h2>Contact me</h2>
         </div>
